Create Contract Screen: work in progress

--- a/contract-renewal/assets/create_contract.html
+++ b/contract-renewal/assets/create_contract.html
@@ -246,6 +246,17 @@
 
 
 
+        <div class="form-actions">
+            <br />
+            <button type="button" class="btn btn-primary btn-submit">Save</button>
+            &nbsp;
+            <button type="button" class="btn btn-default btn-cancel">Cancel</button>
+        </div>
+
+
+
+
+
     </div>
 </div>
 
