--- a/contract-renewal/assets/create_contract.html
+++ b/contract-renewal/assets/create_contract.html
@@ -2,26 +2,19 @@
 <html lang="en">
 <head>
 
-
+    <meta charset="utf-8"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
           integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ=="
           crossorigin="anonymous"/>
 
     <!--<link rel="stylesheet" type="text/css" media="screen" href="{{ w2ui-1.4.3.min.css }}" />-->
     <!--<link rel="stylesheet" type="text/css" media="screen" href="{{ ui.jqgrid-bootstrap.css }}" />-->
-    <!--<link rel="stylesheet" type="text/css" media="screen" href="{{ bootstrap-datepicker3.min.css }}" />-->
+    <link rel="stylesheet" type="text/css" media="screen" href="{{ bootstrap-datepicker3.min.css }}" />
     <!--<link rel="stylesheet" type="text/css" media="screen" href="{{ f3.ppt.css }}" />-->
     <link rel="stylesheet" type="text/css" media="screen" href="{{ jsgrid.min.css }}"/>
     <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.2.0/jsgrid-theme.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="{{ styles.css }}"/>
-    <style type="text/css">
-        .f3mm-contract-renewal {
-            font-size: 13px;
-        }
-    </style>
 
-
-    <meta charset="utf-8"/>
     <title>{{ title }}</title>
 </head>
 <body class="{{ standaloneClass }}">
@@ -30,14 +23,44 @@
 <div class="{{ standaloneClass }}">
     <div class="f3mm-contract-renewal container-fluid">
 
+        <div class="form-actions " style="display: none">
+            <button type="button" class="btn btn-primary btn-submit">Save</button>
+            &nbsp;
+            <a href="{{ ViewContractUrl }}" class="btn btn-default btn-cancel">Cancel</a>
+        </div>
+
+        <div class="form-actions view-contract-action-buttons" style="display: none">
+            <a href="{{ ViewContractUrl }}" class="btn btn-primary">Edit</a>
+            &nbsp;
+            <a href="#" class="btn btn-default btn-cancel">Back to Contract Listing</a>
+        </div>
+
+        <br />
 
         <div class="form-horizontal">
+
+
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            Primary Information
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
             <div class="row">
                 <div class="col-sm-4">
 
 
                     <div class="row">
-                        <div class="col-sm-6">
+                        <div class="col-sm-8">
+
+
+
+
                             <div class="form-group">
                                 <label for="contract_number" class="control-label">Contract #</label>
 
@@ -45,40 +68,17 @@
                                     <input type="text" class="form-control contract-number-text"
                                            id="contract_number"
                                            name="contract_number"/>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="form-group">
-                                <label for="po_number" class="control-label">PO #</label>
-
-                                <div class="">
-                                    <input type="text" class="form-control po-number-text"
-                                           id="po_number"
-                                           name="po_number"/>
+                                    <!--<p class="form-control-static">email@example.com</p>-->
                                 </div>
                             </div>
 
-                        </div>
-                    </div>
 
 
-                    <div class="form-group">
-                        <label for="sales_rep" class="control-label">Sales Rep</label>
-
-                        <div class="">
-                            <select class="form-control sales-rep-dropdown"
-                                    id="sales_rep"
-                                    name="sales_rep">
-                                <option value="" selected="selected"></option>
-
-                            </select>
-                        </div>
-                    </div>
 
 
-                    <div class="row">
-                        <div class="col-sm-6">
+
+
+
 
                             <div class="form-group">
                                 <label for="customer" class="control-label">Customer</label>
@@ -101,11 +101,9 @@
                                 </div>
                             </div>
 
-                        </div>
-                        <div class="col-sm-6">
 
                             <div class="form-group">
-                                <label for="primary_contact" class="control-label">Primary Contact</label>
+                                <label for="primary_contact" class="control-label">End User</label>
 
                                 <div class="">
                                     <!--<select class="form-control customer-dropdown"-->
@@ -125,15 +123,76 @@
                                 </div>
                             </div>
 
+
+                            <div class="form-group">
+                                <label for="primary_contact_email" class="control-label">End User Email</label>
+
+                                <div class="">
+                                    <!--<select class="form-control customer-dropdown"-->
+                                    <!--id="customer"-->
+                                    <!--name="customer">-->
+                                    <!--<option value="" selected="selected"> </option>-->
+                                    <!--</select>-->
+
+                                    <input class="form-control primary-contact-email-text"
+                                           readonly="readonly"
+                                           id="primary_contact_email"
+                                           name="primary_contact_email"
+                                           type="text"/>
+
+                                    <!--<img class="Typeahead-spinner" src="img/spinner.gif">-->
+                                    <!--<span class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true"></span>-->
+
+                                </div>
+                            </div>
+
+
+
+
+                    <div class="form-group">
+                        <label for="sales_rep" class="control-label">Sales Rep</label>
+
+                        <div class="">
+                            <select class="form-control sales-rep-dropdown"
+                                    id="sales_rep"
+                                    name="sales_rep">
+                                <option value="" selected="selected"></option>
+
+                            </select>
                         </div>
                     </div>
+
+
+
+
+                        </div>
+                    </div>
+
 
 
                 </div>
                 <div class="col-sm-4">
 
 
-                    <div class="form-group">
+                    <div class="row">
+                        <div class="col-sm-8">
+
+
+
+
+                            <div class="form-group">
+                                <label for="po_number" class="control-label">PO #</label>
+
+                                <div class="">
+                                    <input type="text" class="form-control po-number-text"
+                                           id="po_number"
+                                           name="po_number"/>
+                                </div>
+                            </div>
+
+
+
+                        <div class="form-group">
                         <label for="vendor" class="control-label">Contract Vendor</label>
 
                         <div class="">
@@ -150,28 +209,39 @@
                         <label for="status" class="control-label">Status</label>
 
                         <div class="">
-                            <input type="text" class="form-control status-text"
-                                   id="status"
-                                   name="status"/>
+                            <select class="form-control status-dropdown"
+                                    id="status"
+                                    name="status">
+                                <option value="1">Pending Approval</option>
+                                <option value="2">Approved</option>
+                                <option value="3">Expired</option>
+                            </select>
                         </div>
                     </div>
 
 
                     <div class="form-group">
-                        <label for="created_date" class="control-label">Created Date</label>
+                        <label for="total_quantity_seats" class="control-label">Total Quantity Seats</label>
 
                         <div class="">
-                            <div class="input-group date">
-                                <input type="text" class="form-control created-date-text"
-                                       id="created_date"
-                                       name="created_date"/>
-                                <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-                            </div>
+                            <input type="text" class="form-control total-quantity-seats-text"
+                                   id="total_quantity_seats"
+                                   name="total_quantity_seats"/>
                         </div>
                     </div>
 
+
+
+
+                        </div>
+                    </div>
+
+
                 </div>
                 <div class="col-sm-4">
+
+                    <div class="row">
+                        <div class="col-sm-8">
 
 
                     <div class="form-group">
@@ -188,8 +258,6 @@
                     </div>
 
 
-                    <div class="row">
-                        <div class="col-sm-6">
                             <div class="form-group">
                                 <label for="start_date" class="control-label">Start Date</label>
 
@@ -203,8 +271,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-sm-6">
+
                             <div class="form-group">
                                 <label for="end_date" class="control-label">End Date</label>
 
@@ -218,39 +285,47 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
+
 
 
                     <div class="form-group">
                         <label for="memo" class="control-label">Memo</label>
 
                         <div class="">
-                            <textarea class="form-control memo-text"
+                            <input type="text" class="form-control memo-text"
                                       id="memo"
-                                      name="memo"></textarea>
+                                      name="memo" />
                         </div>
                     </div>
 
+
+
                 </div>
+            </div>
+
+
+        </div>
             </div>
         </div>
 
 
-
-
-        <h3>Items</h3>
+        <br />
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                Items
+            </div>
+        </div>
         <div class="items-container">
             <div id="jsGrid"></div>
         </div>
 
 
 
-        <div class="form-actions">
+        <div class="form-actions" style="display: none">
             <br />
             <button type="button" class="btn btn-primary btn-submit">Save</button>
             &nbsp;
-            <button type="button" class="btn btn-default btn-cancel">Cancel</button>
+            <a href="{{ ViewContractUrl }}" class="btn btn-default btn-cancel">Cancel</a>
         </div>
 
 
@@ -265,6 +340,7 @@
     window.$ = (window.NS && window.NS.jQuery) || window.jQuery;
     window.pageType = '{{ type }}';
     window.apiSuiteletUrl = '{{ apiSuiteletUrl }}';
+    window.contractInfo = {{ contractInfo }};
 </script>
 <script type="text/javascript"> window.jQuery || document.write('<script src="{{ jquery-1.11.0.min.js }}">\x3C/script>')</script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"
@@ -273,24 +349,13 @@
 
 <script src="//ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
-<!--<script type="text/javascript" src="{{ underscore-min.js }}"></script>-->
 <script type="text/javascript" src="{{ jstorage.js }}"></script>
-<!--<script type="text/javascript" src="{{ fiber.min.js }}"></script>-->
 <script type="text/javascript" src="{{ typeahead.jquery.min.js }}"></script>
-
-<!--<script type="text/javascript" src="{{ bootstrap-datepicker.min.js }}"></script>-->
-<!--<script type="text/javascript" src="{{ grid.locale-en.js }}"></script>-->
-<!--<script type="text/javascript" src="{{ jquery.jqGrid.min.js }}"></script>-->
-
-<!--<script type="text/javascript" src="{{ f3.tooltip-manager.js }}"></script>-->
-<!--<script type="text/javascript" src="{{ f3.state-manager.js }}"></script>-->
-<!--<script type="text/javascript" src="{{ f3.data-manager.js }}"></script>-->
-<!--<script type="text/javascript" src="{{ f3.ui-manager.js }}"></script>-->
-<!--<script type="text/javascript" src="{{ f3.init.js }}"></script>-->
+<script type="text/javascript" src="{{ bootstrap-datepicker.min.js }}"></script>
+<script type="text/javascript" src="{{ underscore-min.js }}"></script>
 <script type="text/javascript" src="{{ jsgrid.min.js }}"></script>
 <script type="text/javascript" src="{{ f3mm-data-manager.js }}"></script>
 <script type="text/javascript" src="{{ f3mm-ui-manager.js }}"></script>
-
 
 </body>
 </html>
