working on price level dropdown.

--- a/contract-renewal/assets/create_contract.html
+++ b/contract-renewal/assets/create_contract.html
@@ -212,9 +212,10 @@
                             <select class="form-control status-dropdown"
                                     id="status"
                                     name="status">
-                                <option value="1">Pending Approval</option>
-                                <option value="2">Approved</option>
-                                <option value="3">Expired</option>
+                                <option value="1">Pending Rep Approval</option>
+                                <option value="2">Pending Customer Approval</option>
+                                <option value="3">Approved</option>
+                                <option value="4">Expired</option>
                             </select>
                         </div>
                     </div>
