price level handling

--- a/contract-renewal/assets/create_contract.html
+++ b/contract-renewal/assets/create_contract.html
@@ -342,6 +342,7 @@
     window.pageType = '{{ type }}';
     window.apiSuiteletUrl = '{{ apiSuiteletUrl }}';
     window.contractInfo = {{ contractInfo }};
+    window.priceLevels = {{ priceLevels }};
 </script>
 <script type="text/javascript"> window.jQuery || document.write('<script src="{{ jquery-1.11.0.min.js }}">\x3C/script>')</script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"
