--- a/contract-renewal/assets/create_contract.html
+++ b/contract-renewal/assets/create_contract.html
@@ -24,7 +24,7 @@
     <div class="f3mm-contract-renewal container-fluid">
 
         <div class="form-actions " style="display: none">
-            <button type="button" class="btn btn-primary btn-submit">Save</button>
+            <button type="submit" class="btn btn-primary btn-submit">Save</button>
             &nbsp;
             <a href="{{ ViewContractUrl }}" class="btn btn-default btn-cancel">Cancel</a>
         </div>
@@ -321,16 +321,12 @@
         </div>
 
 
-
         <div class="form-actions" style="display: none">
             <br />
-            <button type="button" class="btn btn-primary btn-submit">Save</button>
+            <button type="submit" class="btn btn-primary btn-submit">Save</button>
             &nbsp;
             <a href="{{ ViewContractUrl }}" class="btn btn-default btn-cancel">Cancel</a>
         </div>
-
-
-
 
 
     </div>
@@ -349,7 +345,7 @@
         integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ=="
         crossorigin="anonymous"></script>
 
-<script src="//ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js"></script>
+<script src="//ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
 <script type="text/javascript" src="{{ jstorage.js }}"></script>
 <script type="text/javascript" src="{{ typeahead.jquery.min.js }}"></script>
