work in progress.

--- a/contract-renewal/assets/create_contract.html
+++ b/contract-renewal/assets/create_contract.html
@@ -476,14 +476,13 @@
     <script type="text/javascript" src="{{ typeahead.jquery.min.js }}"></script>
     <script type="text/javascript" src="{{ bootstrap-datepicker.min.js }}"></script>
     <script type="text/javascript" src="{{ underscore-min.js }}"></script>
-    <script type="text/javascript" src="{{ jsgrid-customized.js }}"></script>
-    <script type="text/javascript" src="{{ f3mm-jquery-validation.js }}"></script>
-    <script type="text/javascript" src="{{ f3mm-jquery-plugins.js }}"></script>
-    <script type="text/javascript" src="{{ f3mm-jsgrid-fields.js }}"></script>
-    <script type="text/javascript" src="{{ f3mm-data-manager.js }}"></script>
-    <script type="text/javascript" src="{{ f3mm-ui-manager.js }}"></script>
-    <script type="text/javascript" src="{{ f3mm-grid-manager.js }}"></script>
-    <script type="text/javascript" src="{{ f3mm-init.js }}"></script>
+    <script type="text/javascript" src="{{ jsgrid_customized.js }}"></script>
+    <script type="text/javascript" src="{{ f3mm_jquery_validation.js }}"></script>
+    <script type="text/javascript" src="{{ f3mm_jquery_plugins.js }}"></script>
+    <script type="text/javascript" src="{{ f3mm_jsgrid_fields.js }}"></script>
+    <script type="text/javascript" src="{{ f3mm_data_manager.js }}"></script>
+    <script type="text/javascript" src="{{ f3mm_ui_manager.js }}"></script>
+    <script type="text/javascript" src="{{ f3mm_init.js }}"></script>
 
 </body>
 </html>
