added listing screen

--- a/contract-renewal/assets/create_contract.html
+++ b/contract-renewal/assets/create_contract.html
@@ -464,9 +464,9 @@
         window.pageType = '{{ type }}';
         window.apiSuiteletUrl = '{{ apiSuiteletUrl }}';
         window.contractInfo = {{ contractInfo }};
-        window.priceLevels = {{ priceLevels }};
+        //window.priceLevels = {{ priceLevels }};
     </script>
-    <script type="text/javascript"> window.jQuery || document.write('<script src="{{ jquery-1.11.0.min.js }}">\x3C/script>')</script>
+    <script type="text/javascript"> window.$ || document.write('<script src="{{ jquery-1.11.0.min.js }}">\x3C/script>')</script>
     <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"
             integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ=="
             crossorigin="anonymous"></script>
