work in progress added contract listing screen

--- a/contract-renewal/assets/create_contract.html
+++ b/contract-renewal/assets/create_contract.html
@@ -481,7 +481,7 @@
     <script type="text/javascript" src="{{ f3mm_jquery_plugins.js }}"></script>
     <script type="text/javascript" src="{{ f3mm_jsgrid_fields.js }}"></script>
     <script type="text/javascript" src="{{ f3mm_data_manager.js }}"></script>
-    <script type="text/javascript" src="{{ f3mm_ui_manager.js }}"></script>
+    <script type="text/javascript" src="{{ f3mm_create_contract_ui_manager.js }}"></script>
     <script type="text/javascript" src="{{ f3mm_init.js }}"></script>
 
 </body>
