--- a/contract-renewal/assets/create_contract.html
+++ b/contract-renewal/assets/create_contract.html
@@ -24,12 +24,14 @@
                 <button type="submit" class="btn btn-primary btn-submit">Save</button>
                 &nbsp;
                 <a href="{{ viewContractUrl }}" class="btn btn-default btn-cancel">Cancel</a>
+                &nbsp;
+                <a href="{{ contractListingUrl }}" class="btn btn-default btn-cancel">Back to Contract Listing</a>
             </div>
 
             <div class="form-actions view-contract-action-buttons" style="display: none">
                 <a href="{{ viewContractUrl }}" class="btn btn-primary">Edit</a>
                 &nbsp;
-                <a href="#" class="btn btn-default btn-cancel">Back to Contract Listing</a>
+                <a href="{{ contractListingUrl }}" class="btn btn-default btn-cancel">Back to Contract Listing</a>
                 &nbsp;
                 <a href="#" class="btn btn-default btn-view-quote" style="display: none;" target="_blank">View Quote</a>
                 &nbsp;
@@ -203,6 +205,7 @@
                                             <option value="2">Pending Customer Approval</option>
                                             <option value="3">Approved</option>
                                             <option value="4">Expired</option>
+                                            <option value="5">Void</option>
                                         </select>
                                     </div>
                                 </div>
@@ -399,7 +402,7 @@
                             <label for="status" class="control-label">Status</label>
 
                             <div class="">
-                                {{= custrecord_f3mm_status.text }}
+                                {{= custrecord_f3mm_status && custrecord_f3mm_status.text || '' }}
                             </div>
                         </div>
 
