--- a/contract-renewal/assets/list_contracts.html
+++ b/contract-renewal/assets/list_contracts.html
@@ -16,8 +16,13 @@
 
     <!-- we need following class on both elements. body is used for standalone, below div is used for inline in netsuite -->
     <div class="{{ standaloneClass }}">
-        <div class="f3mm-contract-renewal container-fluid">
+        <div class="f3mm-contract-renewal container-fluid contracts-listing-page">
 
+            <!-- Action buttons -->
+            <div class="form-actions">
+                <a href="{{ createSuiteletUrl }}" class="btn btn-primary">New Contract</a>
+            </div>
+            <br/>
 
             <div class="row">
                 <div class="col-sm-12">
@@ -28,7 +33,6 @@
                     </div>
                 </div>
             </div>
-
 
 
             <!-- div for create / edit screen -->
@@ -52,6 +56,16 @@
                                 </div>
 
 
+                                <div class="form-group">
+                                    <label for="customer" class="control-label">Customer <span
+                                            class="mandatory">*</span></label>
+                                    <div class="">
+                                        <input class="typeahead form-control customer-dropdown"
+                                               id="customer"
+                                               name="customer"
+                                               type="text"/>
+                                    </div>
+                                </div>
 
                             </div>
                         </div>
@@ -92,27 +106,65 @@
                     <div class="col-sm-4">
                         <div class="row">
                             <div class="col-sm-8">
+
+                                <div class="form-group">
+                                    <label for="status" class="control-label">Status <span
+                                            class="mandatory">*</span></label>
+
+                                    <div class="">
+                                        <select class="form-control status-dropdown"
+                                                id="status"
+                                                name="status"
+                                                multiple="multiple">
+                                            <option value="1">Pending Rep Approval</option>
+                                            <option value="2">Pending Customer Approval</option>
+                                            <option value="3">Approved</option>
+                                            <option value="4">Expired</option>
+                                            <option value="5">Void</option>
+                                        </select>
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <!-- Contracts Grid -->
-            <!--<div class="panel panel-primary">-->
-                <!--<div class="panel-heading">-->
-                    <!--Contracts-->
-                <!--</div>-->
-            <!--</div>-->
+                <!-- Action buttons -->
+                <div class="form-actions">
+                    <br/>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <button type="button" class="btn btn-apply-filter">Apply Filters</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br />
+
             <div class="contracts-container">
                 <div class="toolbar">
-                    <div class="form-inline">
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox"> SHOW INACTIVES
-                        </label>
+                    &nbsp;
+                    <span class="pull-right">
+                        <span class="total_records_label"></span>
+                    </span>
+
+                    <div class="form-inline pull-left">
+                        <div>
+                            <button type="button" class="btn btn-void">Void Selected Contracts</button>
+                        </div>
                     </div>
-                    </div>
+
+                    <!--<div class="form-inline pull-left">-->
+                        <!--<span class="uir-controlbar-separator"><img src="/images/separator.png" alt=""></span>-->
+                        <!--<div class="checkbox">-->
+                            <!--<label>-->
+                                <!--<input type="checkbox" id="isinactive" name="isinactive"> SHOW INACTIVES-->
+                            <!--</label>-->
+                        <!--</div>-->
+                        <!--<span class="uir-controlbar-separator"><img src="/images/separator.png" alt=""></span>-->
+                    <!--</div>-->
+
                 </div>
                 <div id="jsGrid"></div>
             </div>
