completed export to csv functionality

--- a/contract-renewal/assets/list_contracts.html
+++ b/contract-renewal/assets/list_contracts.html
@@ -116,10 +116,10 @@
                                                 id="status"
                                                 name="status"
                                                 multiple="multiple">
-                                            <option value="1">Pending Rep Approval</option>
-                                            <option value="2">Pending Customer Approval</option>
-                                            <option value="3">Approved</option>
-                                            <option value="4">Expired</option>
+                                            <option value="1" selected="selected">Pending Rep Approval</option>
+                                            <option value="2" selected="selected">Pending Customer Approval</option>
+                                            <option value="3" selected="selected">Approved</option>
+                                            <option value="4" selected="selected">Expired</option>
                                             <option value="5">Void</option>
                                         </select>
                                     </div>
